# knotes

./: .emacs-dirvars  .git-blame-ignore-revs  .gitlab-ci.yml  .kde-ci.yml  .krazy  AUTHORS  CMakeLists.txt  ChangeLog  HACKING  ISSUES  KNotesAppIface.h  KNotesIface.h  Mainpage.dox  Makefile.am  Makefile.in  Messages.sh  README  TODO  alarm.cpp  alarm.h  application.cpp  application.h  bwdatetime.cpp  bwdatetime.h  configdlg.cpp  configdlg.h  docking.cpp  docking.h  down.xbm  fontdlg.cpp  fontdlg.h  knote.cpp  knote.h  knote_config_action.desktop  knote_config_display.desktop  knote_config_editor.desktop  knote_config_network.desktop  knote_config_style.desktop  knoteadaptor.cpp  knoteadaptor.h  (+87 more)
.reuse/: dep5
notesagent/: CMakeLists.txt  Messages.sh  akonadi_notes_agent.notifyrc  notesagent.cpp  notesagent.desktop  notesagent.h  notesagentalarmdialog.cpp  notesagentalarmdialog.h  notesagentnotedialog.cpp  notesagentnotedialog.h  notesagentsettingsdialog.cpp  notesagentsettingsdialog.h  notesmanager.cpp  notesmanager.h  org.freedesktop.Akonadi.NotesAgent.xml
notesagent/kconf_update/: CMakeLists.txt
notesagent/settings/: notesagentsettings.kcfgc
noteshared/autotests/: CMakeLists.txt  noteeditorutilstest.cpp  noteeditorutilstest.h  noteutilstest.cpp  noteutilstest.h
noteshared/src/: CMakeLists.txt  Messages.sh  noteshared_private_export.h  noteutils.cpp  noteutils.h
noteshared/src/akonadi/: notesakonaditreemodel.cpp  notesakonaditreemodel.h  noteschangerecorder.cpp  noteschangerecorder.h
noteshared/src/alarms/: notealarmdialog.cpp  notealarmdialog.h
noteshared/src/attributes/: attributeregistrar.cpp  notealarmattribute.cpp  notealarmattribute.h  notedisplayattribute.cpp  notedisplayattribute.h  notelockattribute.cpp  notelockattribute.h  showfoldernotesattribute.cpp  showfoldernotesattribute.h
noteshared/src/config/: noteactionconfig.cpp  noteactionconfig.h  notenetworkconfig.cpp  notenetworkconfig.h
noteshared/src/dialog/: selectednotefolderdialog.cpp  selectednotefolderdialog.h
noteshared/src/editor/: noteeditor.cpp  noteeditor.h  noteeditorutils.cpp  noteeditorutils.h
noteshared/src/job/: createnewnotejob.cpp  createnewnotejob.h
print/autotests/: CMakeLists.txt  knotesgrantleeprinttest.cpp  knotesgrantleeprinttest.h
qt3stuff/: Makefile.am  qcleanuphandler.h  qcomplextext.cpp  qcomplextext_p.h  qrichtext.cpp  qrichtext_p.cpp  qrichtext_p.h  qscrollview.cpp  qscrollview.h  qsimplerichtext.cpp  qsimplerichtext.h  qstylesheet.cpp  qstylesheet.h  qt3stuff.h  qtextedit.cpp  qtextedit.h
qt3stuff/example/: textedit.cpp
src/: CMakeLists.txt  Messages.sh  config-knotes.h.cmake  kcm_knote_action.cpp  kcm_knote_action.json  kcm_knote_collection.cpp  kcm_knote_collection.json  kcm_knote_display.cpp  kcm_knote_display.json  kcm_knote_editor.cpp  kcm_knote_editor.json  kcm_knote_misc.cpp  kcm_knote_misc.json  kcm_knote_network.cpp  kcm_knote_network.json  kcm_knote_print.cpp  kcm_knote_print.json  kcm_knotes.cpp  knoteconfigmodule.cpp  knoteconfigmodule.h  knoteedit.cpp  knoteedit.h
src/apps/: application.cpp  application.h  knotes_options.h  knotesakonaditray.cpp  knotesakonaditray.h  knotesapp.cpp  knotesapp.h  knotestray.cpp  knotestray.h  main.cpp  org.kde.KNotes.xml
src/configdialog/: knotecollectionconfigwidget.cpp  knotecollectionconfigwidget.h  knoteconfigdialog.cpp  knoteconfigdialog.h  knotedisplayconfigwidget.cpp  knotedisplayconfigwidget.h  knoteeditorconfigwidget.cpp  knoteeditorconfigwidget.h  knotesimpleconfigdialog.cpp  knotesimpleconfigdialog.h
src/data/: kcm_knote_action.desktop  kcm_knote_collection.desktop  kcm_knote_display.desktop  kcm_knote_editor.desktop  kcm_knote_misc.desktop  kcm_knote_network.desktop  kcm_knote_print.desktop  knote_config_action.desktop  knote_config_collection.desktop  knote_config_display.desktop  knote_config_editor.desktop  knote_config_misc.desktop  knote_config_network.desktop  knote_config_print.desktop  knotes.appdata.xml  knotes_printing_theme.knsrc  knotesappui.rc  knotesui.rc  org.kde.knotes.appdata.xml  org.kde.knotes.desktop
src/dialog/: knotedeleteselectednotesdialog.cpp  knotedeleteselectednotesdialog.h  knoteselectednotesdialog.cpp  knoteselectednotesdialog.h  knoteskeydialog.cpp  knoteskeydialog.h
src/finddialog/: knotefinddialog.cpp  knotefinddialog.h
src/icons/: CMakeLists.txt
src/kconf_update/: CMakeLists.txt  knotes-15.08-kickoff.sh  knotes.upd
src/kontactplugin/: CMakeLists.txt  kcmknotessummary.cpp  kcmknotessummary.desktop  kcmknotessummary.h  kcmknotessummary.json  knotes.setdlg  knotes_part.cpp  knotes_part.h  knotes_part.rc  knotes_plugin.cpp  knotes_plugin.h  knoteseditdialog.cpp  knoteseditdialog.h  knotesiconview.cpp  knotesiconview.h  knoteslistwidgetsearchline.cpp  knoteslistwidgetsearchline.h  knotesplugin.desktop  knotesplugin.json  knotesplugin.json.cmake  knotesselectdeletenotesdialog.cpp  knotesselectdeletenotesdialog.h  knoteswidget.cpp  knoteswidget.h  summarywidget.cpp  summarywidget.h
src/notes/: knote.cpp  knote.h  knotebutton.cpp  knotebutton.h  knotedisplaysettings.cpp  knotedisplaysettings.h  knoteinterface.cpp  knoteinterface.h  knotesmigrateapplication.cpp  knotesmigrateapplication.h
src/print/: knotegrantleeprint.cpp  knotegrantleeprint.h  knoteprinter.cpp  knoteprinter.h  knoteprintobject.cpp  knoteprintobject.h  knoteprintselectednotesdialog.cpp  knoteprintselectednotesdialog.h  knoteprintselectthemecombobox.cpp  knoteprintselectthemecombobox.h  knoteprintselectthemedialog.cpp  knoteprintselectthemedialog.h
src/settings/: knotesglobalconfig.kcfg.cmake  knotesglobalconfig.kcfg.in
src/utils/: knoteutils.cpp  knoteutils.h
tests/: CMakeLists.txt  knoteakonadinote.cpp  knoteakonadinote.h  knotesakonadiapp.cpp  knotesakonadiapp.h  knotesakonaditray.cpp  knotesakonaditray.h  knotesakonaditreemodel.h  knoteschangerecorder.cpp  knoteschangerecorder.h  main.cpp  notetest.cpp  notetest.h
tests/apps/: CMakeLists.txt  knoteakonadinote.cpp  knoteakonadinote.h  knotesakonadiapp.cpp  knotesakonadiapp.h  knotesakonaditray.cpp  knotesakonaditray.h  main.cpp
(+367 files in other folders)
