KDE_CXXFLAGS=-UQT_NO_COMPAT
INCLUDES=-I$(top_srcdir) $(all_includes)
noinst_LTLIBRARIES = libqt3stuff.la
libqt3stuff_la_SOURCES = qtextedit.cpp qsimplerichtext.cpp qcomplextext.cpp qrichtext.cpp qrichtext_p.cpp qstylesheet.cpp
libqt3stuff_la_LDFLAGS = $(all_libraries) -no-undefined
libqt3stuff_la_LIBADD = $(LIB_QT)
METASOURCES = AUTO
SUBDIRS = .
KDE_OPTIONS = qtonly
